Using theia.games

--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 
         <link rel="stylesheet" href="css/index.css">
 				
-        <title>Hello GreenHub</title>
+        <title>Theia.Games</title>
     </head>
     <body>
 				<a href='https://github.com/AGoblinKing/greenhub/generate' style='position:fixed;padding:5px 45px;width:128px;top:50px;right:-50px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);box-shadow:0 0 0 3px #0091ff;text-shadow:0 0 0 #ffffff;background-color:#0091ff;color:#ffffff;font-size:13px;font-family:sans-serif;text-decoration:none;font-weight:bold;border:2px dotted #ffffff;-webkit-backface-visibility:hidden;letter-spacing:.5px;'>Use on GitHub</a>		
